# Helix-ASPLOS25

./: .gitignore  DeployDockerfile  Dockerfile  Dockerfile_conda  Dockerfile_gcube  Dockerfile_vast_ai  deploy_docker_run.sh  docker_init.sh  docker_run.sh  docker_run_cluster.sh  docker_stop.sh  env_export.sh  readme.md  requirements.txt  setup.py  vast_client.py  vast_server.py
artifact_evaluation/: _test_ray.py  _test_ray_worker.py  ae_readme.md  launch_worker.sh
artifact_evaluation/ablation/: ablation1_pruning.py  ablation2_initial.py  ablation3_quality.py
artifact_evaluation/distributed_clusters/: step1_gen_cluster.py  step2_gen_layout.py  step3_simulation.py
artifact_evaluation/high_heterogeneity/: run_all_simulations.sh  step1_gen_cluster.py  step2_gen_layout.py  step3_simulation.py
artifact_evaluation/model_placement/: remote_run.py  run_all_real_sys_parsing.sh  run_all_simulations.sh  setup1_gen_sys_config.py  setup1_parse_results.py  setup1_start_host.py  setup1_start_worker.py  setup1_visualization.py  setup2_distributed.py
artifact_evaluation/request_scheduling/: remote_run.py  run_all_real_sys_parsing.sh  run_all_simulations.sh  setup1_gen_sys_config.py  setup1_parse_results.py  setup1_start_host.py  setup1_start_worker.py  setup2_distributed.py
artifact_evaluation/single_cluster/: remote_run.py  run_all_real_sys_parsing.sh  run_all_simulations.sh  step1_gen_cluster.py  step2_gen_layout.py  step3_simulation.py  step4_gen_sys_config.py  step5_start_host.py  step6_start_worker.py  step7_parse_results.py
examples/real_sys/: profiling_host.py  profiling_worker.py  step1_generate_system_config.py  step2_start_host.py  step3_start_worker.py  step4_parse_results.py
examples/simulation/: step1_gen_cluster.py  step2_model_placement.py  step3_run_simulation.py  verify_ilp.py
llm_sys/: build  disaggregate_host.py  gen_sys_config.py  heuristic_host.py  maxflow_host.py  utils.py  worker.py
llm_sys/comm/: CMakeLists.txt  build.sh  llm_sys_comm
llm_sys/comm/src/: compute_worker.h  config_parser.h  const.h  host.h  msg.h  sys_host_api.cpp  sys_worker_api.cpp  utils.h
llm_sys/comm/src/LLM_system.egg-info/: PKG-INFO  SOURCES.txt
llm_sys/comm/tests/: test_msg.cpp  test_packed_client.cpp  test_packed_server.cpp
llm_sys/engine/: common.py  exec_engine.py  llama.py  model_runner.py  scheduler.py  worker.py
llm_sys/profiler/: computation_cost.py  debugging.py  profiler.py  request_filter.py  test_sorter.py  time_overhead.py
(+391 files in other folders)
